# email_extractor

./: Cargo.toml  LICENSE  phone_numbers.txt
src/: csv_processing.rs  edit.rs  email_comparison.rs  email_search.rs  main.rs  phone.rs  phone_extraction.rs
