[package]
name = "csv_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
eframe = { version = "0.22.0", features = ["default_fonts", "glow"] }
rfd = "0.11.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
regex = "1.5"
csv-core = "0.1.10"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
